# duplicate-destroyer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  tests.yml
benches/: lib_bench.rs
src/: checksum.rs  config.rs  dir_tree.rs  duplicate_object.rs  duplicate_table.rs  fake_functions.rs  lib.rs  main.rs  progress_trait.rs
tests/: library_tests.rs
tests/fixtures/B/A/: a.txt
tests/fixtures/C/: diff.txt
tests/fixtures/C/b/: alpha.txt  beta.txt
