[package]
name = "duplicate_destroyer"
description = "Finds and annihilates duplicate directories."
version = "0.0.2"
edition = "2021"
rust-version = "1.64"
license = "AGPL-3.0-or-later"
keywords = ["duplicate", "directory", "cleaner", "finder", "cli"]
categories = ["command-line-utilities", "Filesystem"]
readme = "README.md"
repository = "https://github.com/jm-fn/duplicate-destroyer"

[dependencies]
blake2 = "0"
clap = { version = "4", features = ["derive"], optional = true}
env_logger = "0"
id_tree = "1"
log = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
threadpool = "1"
walkdir = "2"
indicatif = {version = "0", optional = true }
copy_confirmer = {version = "0", optional = true }
dialoguer = {version = "0", optional = true }
minus = {version = "5", optional = true, features = ["static_output", "search"]}

[dev-dependencies]
tempdir = "0.3"
mockall = "0.11"

[features]
cli = ["clap", "indicatif", "copy_confirmer", "dialoguer", "minus"]

[[bin]]
name = "dude"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "duplicate_destroyer"
path = "src/lib.rs"
